5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1601_1804.log
== TEST (2019-04-10 18:44:23) 
-- CODE:
import math as m 
Xa = float(input("Xa:"))
Ya = float(input("Ya:"))
Xb = float(input("Xb"))
Yb = float(input("Yb"))

dAB= m. sqrt((Xb - Xa)**2+(Yb - Ya)**2)

print(roun(dAB,  3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(roun(dAB,  3))
NameError: name 'roun' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:45:00) 
-- CODE:
import math as m 
Xa = float(input("Xa:"))
Ya = float(input("Ya:"))
Xb = float(input("Xb"))
Yb = float(input("Yb"))

dAB= m. sqrt((Xb - Xa)**2+(Yb - Ya)**2)

print(roun(dAB, 3))
-- EXECUTION TIME:
0.140099
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1804/main.py", line 9, in <module>
    print(roun(dAB, 3))
NameError: name 'roun' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:45:02) 
-- CODE:
import math as m 
Xa = float(input("Xa:"))
Ya = float(input("Ya:"))
Xb = float(input("Xb"))
Yb = float(input("Yb"))

dAB= m. sqrt((Xb - Xa)**2+(Yb - Ya)**2)

print(roun(dAB, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(roun(dAB, 3))
NameError: name 'roun' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:45:32) 
-- CODE:
import math as m 
Xa = float(input("Xa:"))
Ya = float(input("Ya:"))
Xb = float(input("Xb"))
Yb = float(input("Yb"))

dAB= m. sqrt((Xb - Xa)**2+(Yb - Ya)**2)

print(roun(dAB,  3))
-- EXECUTION TIME:
0.172563
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1601/1804/main.py", line 9, in <module>
    print(roun(dAB,  3))
NameError: name 'roun' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:45:36) 
-- CODE:
import math as m 
Xa = float(input("Xa:"))
Ya = float(input("Ya:"))
Xb = float(input("Xb"))
Yb = float(input("Yb"))

dAB= m. sqrt((Xb - Xa)**2+(Yb - Ya)**2)

print(roun(dAB,  3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(roun(dAB,  3))
NameError: name 'roun' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:46:02) 
-- CODE:
import math as m 
Xa = float(input("Xa:"))
Ya = float(input("Ya:"))
Xb = float(input("Xb"))
Yb = float(input("Yb"))

dAB= m. sqrt((Xb - Xa)**2+(Yb - Ya)**2)

print(round(dAB,  3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:46:16) 
-- CODE:
import math as m 
Xa = float(input("Xa:"))
Ya = float(input("Ya:"))
Xb = float(input("Xb"))
Yb = float(input("Yb"))

dAB= m. sqrt((Xb - Xa)**2+(Yb - Ya)**2)

print(round(dAB,  3))
-- EXECUTION TIME:
0.145918
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
